# AsciiMachine

./: .gitignore  AsciiConfig.h.in  AsciiGame.data  AsciiGame.html  AsciiGame.js  AsciiGame.mk  AsciiGame.wasm  AsciiLib.mk  AsciiMachine  CHANGELOG  CMakeLists.txt  DebugDrawMap.comment  Entity.hpp  Makefile  README.md  SpriteEditor.mk  Sprites.cpp  TODO.txt  cachegrind.out.289045  cachegrind.out.290421  cutFunctions.cpp  global.txt  global_source_build.cpp  install-raw.sh  install.sh  log.txt  make.lua  make_emscripten.lua  readme.md  test.cpp  test2.cpp
AGUI/: a.out
AGUI/Shaders/: default.vs
API/include/: AsciiSignal.hpp  Camera.hpp  Color.hpp  Config.hpp  Entity.hpp  GUI_o.hpp  Scene.hpp  Server.hpp  Signal.hpp  UtilTypes.hpp  Vector2d.hpp  utils.hpp
API/src/: Camera.cpp  Color.cpp  Config.cpp  GUI_o.cpp  Scene.cpp  Server.cpp  utils.cpp
AsciiMachineAlpha/: ConfirmFile.txt  build_global  global.txt  global_source_build.cpp  todo
AsciiMachineAlpha/src/: GlobalVars.hpp  Sprites.hpp
AsciiMachineCurrent/API/include/: GUI_o.hpp  Scene.hpp  utils.hpp
AsciiMachineCurrent/API/src/: Color.cpp  Entity.cpp  GUI_o.cpp  Scene.cpp  utils.cpp
AsciiMachineCurrent/GUI/: Shader.hpp
Example1/: CMakeLists.txt  Example1.cpp  readme.md
Example2/: CMakeLists.txt  Example2.cpp  readme.md
Example2/textures/: B.rtxt  EvilEntity.rtxt  Zombie.rtxt
Releases/AsciiMachine0.0.1/API/include/: AsciiSignal.hpp  Signal.hpp  Vector2d.hpp  utils.hpp
Releases/AsciiMachine0.0.1/API/src/: GUI_o.cpp  Scene.cpp  utils.cpp
Releases/AsciiMachine0.0.1/GUI/: Shader.cpp  main.cpp
Releases/AsciiMachine0.0.1/docs/: GetStarted.md
Releases/AsciiMachineAlpha/: Makefile  README.md  log.txt  test.cpp
Releases/AsciiMachineAlpha/src/: BaseGUI.hpp  Log.cpp  Parse.cpp  Parse.hpp  Sprites.cpp  utils.hpp
Releases/AsciiMachineAlpha/textures/: NPC.rtxt
asciiengine/: IObject.hpp  Object.hpp  Rect.hpp  TInstance.hpp  Vector2.hpp
asciiengine/Event/: ISubject.hpp  Subject.hpp
asciiengine/SDL/: Font.hpp  SDL_Wrapper.hpp
asciiengine/astd/: Clock.hpp  Container.hpp  Math.hpp  String.hpp  container.hpp  string.hpp  uniprint.hpp
asciiengine/client/: AnimatedText.hpp  AnimatedTextBuilder.hpp  AnimatedTextBuilderUTF8.hpp  AnimatedTextUTF8.hpp  AnimatedTexture.hpp  AnimationManager.hpp  AsciiClient.hpp  ITickingRenderer.hpp  Shader.hpp
asciiengine/common/: Camera.hpp  Scene.hpp
asciiengine/common/entity/: Entity.hpp
asciiengine/common/event/: IObject.hpp  IObserver.hpp  ISubject.hpp  Object.hpp  Observer.hpp  Subject.hpp
asciiengine/common/util/: StringUtil.hpp
asciiengine/core/: Engine.hpp  Font.hpp  IApp.hpp  SDL_FontCache.h  utf-8.h
asciiengine/util/: ColorPrint.hpp  DebugPrint.hpp  str.hpp  util_types.hpp
docs/: GettingStartedForLinux.md  GettingStartedForWindows.md
res/textures/: HowlMovingCastle.txt  beacon.txt
resources/shaders/: shader.frag  shader.vert
resources/textures/: AeromaldTramStation.txt  Event.txt  GodsEnvoy.txt  PlayerRight.txt  Tram.txt  TramStation0.txt  beaconsave.txt
se/: MathBits.hpp  SpriteEditor.cpp
spam/: Makefile  make.lua  spam.mk  test.cpp
spam/src/: IProjectGenerator.cpp  IProjectGenerator.hpp  LinuxProjectGenerator.cpp  LinuxProjectGenerator.hpp  main.cpp  spam.cpp  spam.hpp
spam/src/astd/: Container.cpp
spam/src/tclap/: Arg.h  ArgTraits.h  CmdLineOutput.h  DocBookOutput.h  HelpVisitor.h  OptionalUnlabeledTracker.h  SwitchArg.h  UnlabeledValueArg.h  XorHandler.h  sstream.h
spam/src/util/: GenUUID.cpp  regex.c  regex.h
spam/utility/: install.sh
spam_2/: README.md  make.lua
spam_2/src/: main.cpp
spam_2/src/astd/: Container.hpp
spam_2/src/lua/: luaconf.h  onelua.c  onelua.cpp
spam_2/src/tclap/: ArgException.h  CmdLine.h  CmdLineInterface.h  Constraint.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  StandardTraits.h  StdOutput.h  UnlabeledMultiArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  ZshCompletionOutput.h
spam_2/src/util/: GenUUID.hpp
spam_2/utility/: dev_env_setup.sh
src/: BaseGUI.cpp  BaseGUI.hpp  Entity.cpp  Entity.hpp  GlobalVars.hpp  Log.cpp  Log.hpp  Object.cpp  Object.hpp  Parse.cpp  Server.cpp  Server.hpp  Sprites.cpp  Sprites.hpp  TInstance.cpp  assertvariables.hpp  utils.hpp
src/Event/: Object.cpp  Subject.cpp
src/SDL/: Font.cpp  SDL_FontCache.c  SDL_Wrapper.cpp
src/astd/: Clock.cpp  String.cpp  string.cpp
src/client/: AnimatedText.cpp  AnimatedTextBuilder.cpp  AnimatedTextBuilderUTF8.cpp  AnimatedTextUTF8.cpp  AnimatedTexture.cpp  AnimationManager.cpp  Shader.cpp
src/common/: Camera.cpp  Scene.cpp
src/common/entity/: Entity.cpp
src/common/event/: Object.cpp  Observer.cpp  Subject.cpp
src/common/util/: StringUtil.cpp
src/core/: Engine.cpp  Font.cpp  SDL_FontCache.c  utf-8.c
src/util/: print.cpp  string.cpp
testGame/: Defines.hpp  GameApp.cpp  GameApp.hpp  Map.txt  Options.cpp  Options.hpp  Player.cpp  Player.hpp  main.cpp
testGame/scene/: MainMenuRenderer.cpp  MainMenuRenderer.hpp  MainMenuScene.cpp  MainMenuScene.hpp
textures/: Home.txt  NPC.rtxt  Pics.txt  PlayerRunLeft.txt  PlayerStand.rtxt  Tree.rtxt  Tree1.txt  shrub.txt
